deploy/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    app.kubernetes.io/name: minecraft-standup
