deploy/openshift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-backend
  namespace: minecraft
spec:
  selector:
    app: minecraft-backend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
