deploy/openshift/paper-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-paper
  namespace: minecraft
spec:
  type: LoadBalancer
  selector:
    app: minecraft-paper
  ports:
  - name: minecraft
    port: 25565
    targetPort: 25565
