deploy/openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minecraft-backend
  namespace: minecraft
spec:
  to:
    kind: Service
    name: minecraft-backend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
